--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
       content="Tracking EMR Utilisation in Uganda"
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>EMR UgandaemrPOC</title>
+    <title>EMR Metrics</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
